--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "socket.io": "^4.7.1",
+    "uuid": "^9.0.0"
   }
 }
